base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app: taco-cloud
  name: taco-cloud
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: taco-cloud
