base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app: dev-taco-cloud
  name: dev-taco-cloud
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: dev-taco-cloud
    weight: 100
  wildcardPolicy: None
